# minigc.rs

./: Cargo.toml  gc.trace
src/: interpreter.rs  main.rs  traits.rs  vm.rs
