[package]
name = "minigc"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
generational-arena = "0.2"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log-always"] }
tracing-flame = "0.1"
tracing-subscriber = "0.2"
